--- a/ProjectMC2-SLEEPTRACKER/Base.lproj/Main.storyboard
+++ b/ProjectMC2-SLEEPTRACKER/Base.lproj/Main.storyboard
@@ -278,6 +278,11 @@ This is a representation of human nature. We are like the goblin; we all go to v
                                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7rA-Nr-7IS">
+                                        <rect key="frame" x="0.0" y="59" width="328" height="54"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </view>
                                     <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vYj-l9-Uk8">
                                         <rect key="frame" x="0.0" y="59" width="328" height="54"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -423,6 +428,7 @@ This is a representation of human nature. We are like the goblin; we all go to v
                     <connections>
                         <outlet property="addProfileButton" destination="N1t-vd-3zU" id="Wbm-ZD-7Vm"/>
                         <outlet property="barEmptyView" destination="VOE-gU-4eb" id="JQS-rZ-Ugr"/>
+                        <outlet property="barTEmptyView" destination="7rA-Nr-7IS" id="JG7-pW-aS2"/>
                         <outlet property="barTView" destination="vYj-l9-Uk8" id="MNB-pa-3gV"/>
                         <outlet property="barView" destination="5ij-D8-pRC" id="mnO-iM-xZ4"/>
                         <outlet property="loggedInProfileButton" destination="DiW-UU-iA2" id="GsT-2r-8mB"/>
